<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">库存管理</string>
    <string name="main_project">主项目</string>
    <string name="hello_world">你好！欢迎来到红海湾水电站</string>
    <string name="action_settings">Settings</string>
    <string name="content_hint">Content</string>
    <string name="drawer_hint">Drawer</string>
    <string name="rounded">See Rounded</string>
    <string name="squared">See Squared</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_load">LoadActivity</string>
    <string name="error_title">错误</string>
    <string name="error_obtain_once">无法获取ONCE</string>
    <string name="error_network_exception">网络通信异常，请稍后重试</string>
    <string name="error_network_disconnect">网络不可达,请开启Wifi或者移动数据网络</string>
    <string name="error_reply">提交失败</string>
    <string name="error_create_topic">无法创建新话题</string>
    <string name="error_login">无法登录</string>
    <string name="error_fav_nodes">收藏节点错误</string>
    <string name="error_fav_topic">收藏话题错误</string>
    <string name="error_get_profile">无法获取用户个人资料</string>
    <string name="error_unknown">未知错误</string>
    <string name="confirm">确定</string>
    <string name="input">提交</string>
    <string name="input_all">全部提交</string>
    <string name="search">查询</string>
    <string name="result">扫描结果结果</string>
    <string name="search_result">查询结果</string>

    <!-- <string name="login_user_hint">用户名</string> -->
    <!-- <string name="login_passwd_hint">密码</string> -->
    <!-- <string name="login_please_login">尚未登录</string> -->
    <!-- <string name="login_login">登录</string> -->
    <string name="login_loging">登录中...</string>
    <string name="login_obtain_profile">获取用户基本信息...</string>
    <!-- <string name="login_error_empty_user">用户名不能为空</string> -->
    <!-- <string name="login_error_empty_passwd">密码不能为空</string> -->

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="umeng_example_home_btn_analytics">Analytics</string>

    <!-- 主项目列表 -->
    <string name="item_num_title">编号:</string>
    <string name="item_desc_title">描述:</string>
    <!-- hint -->
    <string name="hint_item_num_title">暂无编号</string>
    <string name="hint_item_desc_title">暂无描述</string>
    <string name="title_activity_item_details">主项目详情</string>
    <string name="have_not_data">暂无数据</string>
    <string name="item_num_text">项目编号:</string>
    <string name="item_desc_text">描        述:</string>
    <string name="item_in20_text">规格型号:</string>
    <string name="item_orderunit_text">订购单位:</string>
    <string name="item_issueunit_text">发放单位:</string>
    <string name="item_enterby_text">录 入 人:</string>
    <string name="ietm_enterdate_text">录入时间:</string>
    <string name="submit_button_text">提交</string>
    <string name="po_num_text">采购单:</string>
    <string name="po_desc_text">描述:</string>
    <string name="po_recorder_text">接收人:</string>
    <string name="po_vendor_text">供应商:</string>
    <string name="po_recorde_text">接收</string>
    <string name="po_return_text">退货</string>
    <string name="poline_itemnum">项目:</string>
    <string name="poline_polinenum">行号:</string>
    <string name="poline_desc">描述:</string>
    <string name="poline_recorde_num">接收数量:</string>
    <string name="poline_return_num">退货数量:</string>
    <string name="poline_orderqty">总数量:</string>
    <string name="poline_orderunit">单位:</string>
    <string name="poline_storeloc">仓库号:</string>
    <string name="poline_binnum">库位号:</string>
    <string name="material_receiving">物料接收</string>
    <string name="material_list">物料列表</string>
    <string name="material_details">物料列表</string>
    <string name="submit_process_ing">正在提交</string>
    <string name="submit_successful_text">提交成功</string>
    <string name="item_picture_title">附件:</string>
    <string name="title_activity_picture">PictureActivity</string>
    <string name="choose_picture_text">选择图片</string>
    <string name="logined_member_username">logined_member_username</string>
    <string name="logined_member_password">logined_member_password</string>
    <string name="logined_member_ischeck">logined_member_ischeck</string>

    <string name="login_successful_hint">登陆成功</string>
    <string name="get_data_info_fail">获取信息失败</string>
    <string name="have_not_data_txt">暂无相关数据</string>


    <string name="binnum_text">库位号:</string>
    <string name="curbaltotal_text">当前余量:</string>
    <string name="location_num_text">仓库编号:</string>
    <string name="locationdesc_text">仓库描述:</string>
    <string name="lotnum_text">批次:</string>
    <string name="inv_text_title">库存情况详情</string>

    <!--物资编码申请-->
    <string name="itemreqnum_text">申请编号:</string>
    <string name="itemreq_description_text">申请描述:</string>
    <string name="itemreq_title_text">物资详情</string>
    <string name="itemreq_num_title">物资编号:</string>
    <string name="itemreq_matername_text">物资名称:</string>
    <string name="itemreq_xh_text">物资型号:</string>
    <string name="generate_item_number">生成物资编码</string>
    <string name="work_flow">工作流</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="eixt_hint_text">再按一次退出程序</string>

    <string name="itemreqDetails_list">要转移的库存项目</string>
    <string name="invbalances_remove">移出</string>
    <string name="invbalances_move">移入</string>
    <string name="matrectrans_details">转移详情</string>

    <!--库存转移-->
    <string name="title_activity_locations_detail">库房</string>
    <string name="locations_location_title">位置:</string>
    <string name="location_sited_text">地点:</string>
    <string name="locations_removed_btn">移出</string>
    <string name="locations_move_btn">移入</string>
    <string name="locations_title_text">库房详情</string>
    <string name="location_zhuangyi">转移</string>
    <string name="location_zhuangyi_matrectrans">转移详情</string>

    <!--库存转移详情页面-->
    <string name="matrectrans_itemnum">项目:</string>
    <string name="matrectrans_description">描述:</string>
    <string name="matrectrans_type">型号:</string>
    <string name="matrectrans_receiptquantity">数量:</string>
    <string name="matrectrans_curbaltotal">当前余量:</string>
    <string name="matrectrans_linecost">行成本:</string>
    <string name="matrectrans_frombin">原库位号:</string>
    <string name="matrectrans_fromstoreloc">原仓库:</string>
    <string name="matrectrans_tostoreloc_title">目标仓库</string>
    <string name="matrectrans_tostoreloc">目标仓库:</string>
    <string name="matrectrans_tobin">目标库位号:</string>

    <!--仓库库位号选择页面-->
    <string name="title_activity_bin">库位号</string>
    <string name="bin_from">原库位号</string>
    <string name="bin_to">目标库位号</string>
    <string name="bin_batch">批次:</string>
    <string name="bin_curbaltotal">当前余量:</string>
    <string name="bin_item">货柜:</string>

    <!--弹出框-->
    <string name="title_alert">提示信息</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="exit_dialog_hint">确定退出程序吗？</string>
    <string name="exit_dialog_title">提示</string>
    <string name="sure">确定</string>
    <string name="canel">取消</string>

    <!--库存项目-->
    <string name="title_activity_invbalances_list">库存项目</string>
    <string name="invbalances_itemnum_text">项目:</string>
    <string name="loading_data_fail">加载数据失败...</string>
    <string name="confirm_text">确认</string>
    <!--库存项目详情-->
    <string name="title_activity_invbalance_detail">项目详情</string>
    <string name="invbalance_itemnum_title">项目:</string>
    <string name="invbalance_in20_title">规格型号:</string>
    <string name="invbalance_orderunit_title">订购单位:</string>
    <string name="invbalance_curbal_title">当前余量:</string>
    <string name="invbalance_location_title">库房:</string>
    <string name="invbalance_siteid_title">地点:</string>
    <string name="invbalance_binnum_title">货柜:</string>

    <!-- 二微码扫描 -->
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="scanning_text">条码/二维码</string>
    <string name="title_activity_results_">Results_Activity</string>
    <string name="title_activity_results_search">Results_searchActivity</string>
    <string name="title_activity_cinvbalances">CInvbalancesActivity</string>


    <!--库存余量详情-->
    <string name="title_activity_cinvbalances_detail">库存余量详情</string>
    <string name="invbalances_binnum_title">货柜:</string>
    <string name="invbalances_lotnum_title">批次:</string>
    <string name="invbalances_curbal_title">当前余量:</string>
    <string name="invbalances_invtype_title">库存类别:</string>
    <string name="inbalance_itemnum_title">物资编号:</string>
    <string name="cinvbalances_detail_title">余量详情</string>
    <!--出库详情-->
    <string name="workorder_wonum_title">编号:</string>
    <string name="workorder_desction_title">描述:</string>
    <string name="workorder_onbehalfof_title">领用人:</string>
    <string name="workorder_status_title">状态:</string>
    <string name="workorder_detail_title">出库详情</string>
    <string name="invreserve_location_title">库房:</string>
    <string name="withdrawing_text">退库</string>
    <string name="issue_text">发放</string>
    <string name="isfinish_title">已经生产编码 ?</string>
    <string name="transfer_text">转移</string>
    <string name="invbalances_pici_hint">请输入批次进行选择...</string>
    <string name="matrectrans_fromlot_title">原批次:</string>
    <string name="matrectrans_tolot_title">目标批次:</string>
</resources>
