<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.cdhxqh.inventorymovement.ui.detailsUi.ItemDetailsActivity">

    <include
        android:id="@+id/title_id"
        layout="@layout/title_text"></include>


    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:foreground="?android:selectableItemBackground"
        android:orientation="vertical">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/dimen_5"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <LinearLayout
                android:id="@+id/num_linearlayout_id"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_40dp"
                android:layout_marginLeft="@dimen/dimen_5"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/item_num_title"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/matrectrans_itemnum"
                    android:textColor="@color/body_text_1"
                    android:textSize="@dimen/dimen_20sp" />

                <TextView
                    android:id="@+id/matrectrans_itemnum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_5"
                    android:layout_toRightOf="@+id/item_num_title"
                    android:hint="@string/have_not_data"
                    android:textColor="@color/body_text_1"
                    android:textSize="@dimen/dimen_20sp" />
            </LinearLayout>

            <View
                android:id="@+id/view_1_id"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/num_linearlayout_id"
                android:background="@drawable/line"></View>

            <LinearLayout
                android:id="@+id/desc_linearlayout_id"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_40dp"
                android:layout_below="@+id/view_1_id"
                android:layout_marginLeft="@dimen/dimen_5"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/item_desc_title"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/matrectrans_description"
                    android:textColor="@color/body_text_1"
                    android:textSize="@dimen/dimen_20sp" />

                <EditText
                    android:id="@+id/matrectrans_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/have_not_data"
                    android:textColor="#222222"
                    android:textSize="@dimen/dimen_20sp" />
            </LinearLayout>


            <View
                android:id="@+id/view_2_id"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/desc_linearlayout_id"
                android:background="@drawable/line"></View>

            <LinearLayout
                android:id="@+id/in20_linearlayout_id"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_40dp"
                android:layout_below="@+id/view_2_id"
                android:layout_marginLeft="@dimen/dimen_5"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/item_in20_title"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/matrectrans_type"
                    android:textColor="@color/body_text_1"
                    android:textSize="@dimen/dimen_20sp" />

                <EditText
                    android:id="@+id/matrectrans_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/have_not_data"
                    android:textColor="#222222"
                    android:textSize="@dimen/dimen_20sp" />
            </LinearLayout>

            <View
                android:id="@+id/view_3_id"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/in20_linearlayout_id"
                android:background="@drawable/line"></View>

            <LinearLayout
                android:id="@+id/orderunit_linearlayout_id"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_40dp"
                android:layout_below="@+id/view_3_id"
                android:layout_marginLeft="@dimen/dimen_5"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/item_orderunit_title"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/matrectrans_receiptquantity"
                    android:textColor="@color/body_text_1"
                    android:textSize="@dimen/dimen_20sp" />

                <TextView
                    android:id="@+id/matrectrans_receiptquantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_5"
                    android:layout_toRightOf="@+id/item_num_title"
                    android:hint="@string/have_not_data"
                    android:textColor="@color/body_text_1"
                    android:textSize="@dimen/dimen_20sp" />
            </LinearLayout>

            <View
                android:id="@+id/view_4_id"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/orderunit_linearlayout_id"
                android:background="@drawable/line"></View>

            <LinearLayout
                android:id="@+id/issueunit_linearlayout_id"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_40dp"
                android:layout_below="@+id/view_4_id"
                android:layout_marginLeft="@dimen/dimen_5"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/item_issueunit_title"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/matrectrans_curbaltotal"
                    android:textColor="@color/body_text_1"
                    android:textSize="@dimen/dimen_20sp" />

                <TextView
                    android:id="@+id/matrectrans_curbaltotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_5"
                    android:layout_toRightOf="@+id/item_num_title"
                    android:hint="@string/have_not_data"
                    android:textColor="@color/body_text_1"
                    android:textSize="@dimen/dimen_20sp" />
            </LinearLayout>

            <View
                android:id="@+id/view_5_id"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/issueunit_linearlayout_id"
                android:background="@drawable/line"></View>

            <LinearLayout
                android:id="@+id/enterby_linearlayout_id"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_40dp"
                android:layout_below="@+id/issueunit_linearlayout_id"
                android:layout_marginLeft="@dimen/dimen_5"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/item_enterby_title"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/matrectrans_linecost"
                    android:textColor="@color/body_text_1"
                    android:textSize="@dimen/dimen_20sp" />

                <TextView
                    android:id="@+id/matrectrans_linecost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_5"
                    android:layout_toRightOf="@+id/item_num_title"
                    android:hint="@string/have_not_data"
                    android:textColor="@color/body_text_1"
                    android:textSize="@dimen/dimen_20sp" />
            </LinearLayout>

            <View
                android:id="@+id/view_6_id"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/enterby_linearlayout_id"
                android:background="@drawable/line"></View>

            <LinearLayout
                android:id="@+id/enterdate_linearlayout_id"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_40dp"
                android:layout_below="@+id/view_6_id"
                android:layout_marginLeft="@dimen/dimen_5"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/item_enterdate_title"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/matrectrans_frombin"
                    android:textColor="@color/body_text_1"
                    android:textSize="@dimen/dimen_20sp" />

                <TextView
                    android:id="@+id/matrectrans_frombin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_5"
                    android:layout_toRightOf="@+id/item_num_title"
                    android:hint="@string/have_not_data"
                    android:textColor="@color/body_text_1"
                    android:textSize="@dimen/dimen_20sp" />
            </LinearLayout>

            <View
                android:id="@+id/view_7_id"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/enterdate_linearlayout_id"
                android:background="@drawable/line"></View>

            <LinearLayout
                android:id="@+id/tostoreloc_linearlayout_id"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_40dp"
                android:layout_below="@+id/view_7_id"
                android:layout_marginLeft="@dimen/dimen_5"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/matrectrans_tostoreloc_title"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/matrectrans_tostoreloc"
                    android:textColor="@color/body_text_1"
                    android:textSize="@dimen/dimen_20sp" />

                <TextView
                    android:id="@+id/matrectrans_tostoreloc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_5"
                    android:layout_toRightOf="@+id/item_num_title"
                    android:hint="@string/have_not_data"
                    android:textColor="@color/body_text_1"
                    android:textSize="@dimen/dimen_20sp" />
            </LinearLayout>

            <View
                android:id="@+id/view_8_id"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/tostoreloc_linearlayout_id"
                android:background="@drawable/line"></View>

            <LinearLayout
                android:id="@+id/tobin_linearlayout_id"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_40dp"
                android:layout_below="@+id/view_8_id"
                android:layout_marginLeft="@dimen/dimen_5"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/matrectrans_tobin_title"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/matrectrans_tobin"
                    android:textColor="@color/body_text_1"
                    android:textSize="@dimen/dimen_20sp" />

                <TextView
                    android:id="@+id/matrectrans_tobin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_5"
                    android:layout_toRightOf="@+id/item_num_title"
                    android:hint="@string/have_not_data"
                    android:textColor="@color/body_text_1"
                    android:textSize="@dimen/dimen_20sp" />
            </LinearLayout>

            <View
                android:id="@+id/view_9_id"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/tobin_linearlayout_id"
                android:background="@drawable/line"></View>

            <Button
                android:id="@+id/confirm_button_id"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="50dp"
                android:layout_marginLeft="@dimen/dimen_20"
                android:layout_marginRight="@dimen/dimen_20"
                android:layout_marginTop="16dp"
                android:background="@drawable/login_button"
                android:text="@string/confirm"
                android:textStyle="bold" />

        </RelativeLayout>


    </android.support.v7.widget.CardView>


</LinearLayout>
